Adicionado arquivo csv na pasta do projeto e alterado diretório de leitura da base.

--- a/Business Intelligence.ipynb
+++ b/Business Intelligence.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,12 +69,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Carregando a base de dados\n",
-    "base = pd.read_csv('/home/angelmario/Desktop/aplicativo.csv')"
+    "base = pd.read_csv('aplicativo.csv')"
    ]
   },
   {
