--- a/Pedidos.ipynb
+++ b/Pedidos.ipynb
@@ -49,7 +49,7 @@
    "outputs": [],
    "source": [
     "#Carregando a base de dados\n",
-    "base = pd.read_csv('/home/angelmario/Desktop/aplicativo.csv')"
+    "base = pd.read_csv('aplicativo.csv')"
    ]
   },
   {
